--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ MONGO_PASSWORD=admin123
 MONGO_HOST=192.168.2.118
 MONGO_DATABASE=test_database
 MONGO_COLLECTION=truckTracker
+
+DEVICE =cpu
+OBJECT =all
+
