--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ utils/object_detection/PaddleDetection/output/
 utils/object_detection/PaddleDetection/data/
 output/
 .env
+data_fetch/args_get_data.py
