--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ MONGO_HOST=192.168.2.118
 MONGO_DATABASE=test_database
 MONGO_COLLECTION=truckTracker
 
-DEVICE =cpu
-OBJECT =all
+DEVICE=gpu
+OBJECT=all
 
