--- a/.env
+++ b/.env
@@ -5,5 +5,12 @@ MONGO_DATABASE_PRIMARY=test_database
 MONGO_COLLECTION_PRIMARY=panel_images
 MONGO_COLLECTION_SEC=truckTracker
 MONGO_COLLECTION_META=meta_data
+
 FROM_DT=2021-10-01T00:01:00.364Z
 TO_DT=2021-10-01T11:59:00.364Z
+
+MONGO_USERNAME_PROD=root
+MONGO_PASSWORD_PROD=root
+MONGO_HOST_PROD=192.168.1.139
+MONGO_DATABASE_PROD=image_store
+MONGO_COLLECTION_PROD=panel_images
