--- a/.env
+++ b/.env
@@ -7,8 +7,8 @@ MONGO_COLLECTION_PRIMARY=panel_images
 MONGO_COLLECTION_SEC=truckTracker
 MONGO_COLLECTION_META=meta_data
 
-FROM_DT=2021-10-01T00:01:00.364Z
-TO_DT=2021-10-01T11:59:00.364Z
+FROM_DT=None
+TO_DT=None
 
 MONGO_USERNAME_PROD=root
 MONGO_PASSWORD_PROD=root
